# rocket-project-demo

./: Cargo.toml  README.md  Rocket.toml  database.sqlite  diesel.toml
migrations/2024-01-01-061212_create_products/: up.sql
src/: basic_auth.rs  main.rs  models.rs  repositories.rs  schema.rs
src/controller/: mod.rs
src/database/: mod.rs
src/models/: mod.rs
src/repositories/: mod.rs
