[package]
name = "rocket-project-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
base64 = "0.21.0" # auth
diesel = {version = "2.1.4", features = ["sqlite", "r2d2"] }

# SQLite db [cargo install diesel_cli --no-default-features --features sqlite]
#            上面的指令出现问题，然后用这个解决： sudo apt install libsqlite3-dev
[dependencies.rocket_sync_db_pools]
version = "0.1.0"
features = ["diesel_sqlite_pool", "sqlite_pool"]